# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2011
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#

Changes since last release:

VERSION 0.6.xx
DATE 0x/xx/2011
42nd Alpha Release

NEWS:

NEW: [features/enhancements]
+New version of Launch v1.10 (now supports all filetypes)

BUG FIXES:
+Fix bug in restoring bookmarks after a file reload.

#-----------------------------------------------------------------------------#

VERSION 0.6.26
DATE 03/18/2011
41st Alpha Release

NEWS:
This is a quick bug fix for a critical issue that could cause Editra to not
be able to properly start again after part of the profile settings became
corrupted. If you were affected by this in the previous release this release
should fix it. The other workaround is to delete your Editra user profile from
the configuration directory and restarting Editra.

NEW: [features/enhancements]
+New icon for showing bookmarks in the bookmark margin.

LIBRARY:
+New api for setting breakpoint markers in editor buffer margin.
+Improved API documentation available on website.

BUG FIXES:
+Fix crash when restoring Shelf layout if a some tabs are not reloaded.
+Only save buffers that have modifications when Save All is called.
+Fix Delete Bookmark button being disabled while BookMarkMgr is docked.
+Fix issue with Find/Replace dialog popping up underneath OSX/Gnome global menubar.

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.6.20
DATE 02/26/2011
40th Alpha Release

NEWS:
This release contains a number of fixes for long standing issues including a
major rework of the Style Editor dialog. The window layout of the Shelf's tabs
are now saved and restored between running sessions of Editra. New shelf window
for managing, navigating, and viewing all set Bookmarks. See the changelog below
for more details about this release.
